@@ -392,3 +392,19 @@ test('Remove format bug 1', function() {
 	editor.formatter.remove('format');
 	equal(editor.getContent(), '<p><b><i>a</i></b><i>b</i><b>c</b></p>');
 });
+
+test('Remove format bug 2', function() {
+	editor.setContent('<p>ab<b>c</b></p>');
+	editor.formatter.register('format', {inline: 'b'});
+	Utils.setSelection('b', 0, 'b', 1);
+	editor.formatter.remove('format');
+	equal(editor.getContent(), '<p>abc</p>');
+});
+
+test('Remove format bug 3', function() {
+	editor.setContent('<p><b><i>ab</i></b></p>');
+	editor.formatter.register('format', {inline: 'b'});
+	Utils.setSelection('i', 1, 'i', 2);
+	editor.formatter.remove('format');
+	equal(editor.getContent(), '<p><b><i>a</i></b><i>b</i></p>');
+});
